my-app/src/css/profile.css
.profile_form_fields {
  display: flex;
  flex-direction: row;
  width: 100%;
  border-bottom: 1px solid black;
  margin-top: 10px;
  padding: 15px 0;
  align-items: center;
}

.label {
  flex: 1;
}

.inputField {
  flex: 2;
  height: 25px;
}

.picture_container {
  height: 300px;
  width: 85%;
  border-radius: 120px 0 0 0;
  position: absolute;
  background: rgb(239, 236, 244);
  background: linear-gradient(
    83deg,
    rgba(239, 236, 244, 1) 0%,
    rgba(239, 236, 244, 1) 100%
  );
}

.flex_row {
  display: flex;
  flex-direction: row;
}

.flex_column {
  display: flex;
  flex-direction: column;
}

